--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
+log_format = %(asctime)s %(levelname)s %(message)s
 log_cli = true
 log_cli_level = INFO
+addopts = --alluredir allure-results --clean-alluredir
